# linkedin-mcp

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  auth.py  linkedin_config.json  pyproject.toml  release-please-config.json  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codex-reviewer.yml  release-please.yml
tests/: test_basic.py
tools/: articles.py  feed.py  insights.py  posts.py  profile.py
